@@ -1,34 +1,33 @@
-This is a Netty-based WebSocket communication server that supports cluster mode operation. Running instances can be arbitrarily expanded as needed without any cluster burden, and data distribution is achieved through Redis data sharing (subscription and publishing).
+Private im server  support cluster version 1.0.0
 
-main feature:
-1. Simple and easy to understand. On this basis, plug-ins can be expanded to achieve unique functions.
-2. Support efficient operation
-3. Support cluster operation
-4. The mechanism for cluster instances to transmit messages to each other is simple
-5. Simple configuration
-
+This is a message server based on Netty WebSocket. It also requires Redis as the basic message service, supports large-scale deployment, and supports millions of users.
 
 Operating environment:<br>
 1. Jdk11<br>
 2. Springboot2.2.4<br>
 3. Redis<br>
 
-
-start up:
-
-1. Jar file running mode<br>
-$#>java -jar privateimserver-1.0.0-SNAPSHOT.jar [1/2],[ip],[port]<br>
-
-
-2. docker running mode<br>
-2.1. Install docker environment<br>
-2.2. Create docker-compose.yml<br>
-2.3. Create dockerfile again<br>
-2.4. docker build -t privateimserver:v1.0.0.<br>
-2.5. docker run -itd -p [port]:[port] --name privateimserver_01 [Image name] [1/2],[ip],[port]<br>
+❶→Startup parameter case:
+<1,127.0.0.1,9922,0>
+-1: Describes the operating environment. This version supports test, pre-release, and production lines.
+-127.0.0.1: Server IP running the IM service
+-9922: Indicates the listening port of the server
+-0: Indicates the message forwarding mechanism between clusters, 0/1 0=uses the built-in Socket as the communication mechanism between clusters, 1=uses Redis subscription and publishing as the communication mechanism between clusters
 
 
-3. Operation parameter description: [1/2],[ip],[port]<br>
-[1]: Test environment, [2]: Production environment<br>
-[ip]: IP address of the device running this service<br>
-[port]: IM server external service port<br>
+
+
+❷→Special Instructions:
+1. <-server -Xmx3550m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps>   These parameters must be placed after <1,127.0.0.1,9922,0>
+2. Please refer to application.yml for Redis configuration. You can specify parameters for the test environment, pre-release environment, and production environment respectively.
+
+❸→Deployment method
+1. Jar startup command case
+java -jar privateimserver-1.0.0-SNAPSHOT.jar 1,127.0.0.1,9922,0 --server.port=8047 -server -Xmx3550m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+
+java -jar privateimserver-1.0.0-SNAPSHOT.jar 1,127.0.0.1,9955,0 --server.port=8049 -server -Xmx3550m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+
+java -jar privateimserver-1.0.0-SNAPSHOT.jar 1,127.0.0.1,9966,0 --server.port=8048 -server -Xmx3550m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+
+
+2. Please refer to the docker deployment operation process for how to start docker mode.
